[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "z1monitoring-agent"
version = "0.1.0"
description = "Z1 Monitoring AI Agent - shared agent core, tools and utilities"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "structlog",
    "matplotlib",
    "fpdf2",
    "unidecode",
]
# Nota: z1monitoring-models é peer dependency - deve ser instalado pelo projeto que usa este pacote

[tool.setuptools.packages.find]
include = ["z1monitoring_agent*"]
